Fix top leaderboard ad on mobile (#888)
* Fixed top leaderboard ad and font https

* Lint

* Updated amp styles and also fixed top ad

* Added new server package version

--- a/src/app/styles/components/_ads.scss
+++ b/src/app/styles/components/_ads.scss
@@ -11,11 +11,26 @@
 }
 
 .ad--section-top-leaderboard {
+    background: none;
+    margin-bottom: 0;
+    padding-top: 73px;
+    padding-bottom: 0;
+
+    @media #{$medium-up} {
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+
     @media #{$large-up} {
         position: relative;
         z-index: 1;
         max-width: 1024px;
         margin: 20px auto;
+    }
+
+    @media #{$xlarge-up} {
+        padding-top: 40px;
+        padding-bottom: 25px;
     }
 }
 
