--- a/src/app/styles/components/_container.scss
+++ b/src/app/styles/components/_container.scss
@@ -1,10 +1,10 @@
 .page {
     &__top-container {
         padding-top: 20px;
-        margin-bottom: 0px;
+        margin-bottom: 0;
 
         @media #{$medium-up} {
-            padding-top: 0px;
+            padding-top: 0;
         }
 
         .row {
@@ -13,23 +13,6 @@
                     left: 0;
                     right: 0;
                 }
-            }
-        }
-
-        .ad--section-top-leaderboard {
-            background: none;
-            margin-bottom: 0;
-            padding-top: 15px;
-            padding-bottom: 0;
-
-            @media #{$medium-up} {
-                padding-top: 30px;
-                padding-bottom: 20px;
-            }
-
-            @media #{$xlarge-up} {
-                padding-top: 40px;
-                padding-bottom: 25px;
             }
         }
     }
