--- a/src/app/styles/components/home/_ad.scss
+++ b/src/app/styles/components/home/_ad.scss
@@ -1,6 +1,6 @@
 .home-page {
     .ad--section-top-leaderboard {
-        background-color: #f8f8f8;
+        background-color: $color-white;
         background: none;
         margin-bottom: 0;
         padding-top: 15px;
